--- a/lib/premiere_ecoute_web/live/accounts/follows_live.html.heex
+++ b/lib/premiere_ecoute_web/live/accounts/follows_live.html.heex
@@ -1,4 +1,4 @@
-<Layouts.app flash={@flash} current_scope={assigns[:current_scope] || %{}}>
+<Layouts.app flash={@flash} banners={assigns[:banners] || []} current_scope={assigns[:current_scope] || %{}}>
   <div class="synthwave-bg px-6 py-8" style="min-height: calc(100vh - 5rem);">
     <div class="flex-1 py-12">
       <div class="max-w-7xl mx-auto px-6">
