--- a/lib/premiere_ecoute_web/live/accounts/user_confirmation_live.html.heex
+++ b/lib/premiere_ecoute_web/live/accounts/user_confirmation_live.html.heex
@@ -1,4 +1,4 @@
-<Layouts.app flash={@flash} current_scope={@current_scope}>
+<Layouts.app flash={@flash} banners={assigns[:banners] || []} current_scope={@current_scope}>
   <div class="mx-auto max-w-sm">
     <.header class="text-center">Welcome {@user.email}</.header>
 
