--- a/lib/premiere_ecoute_web/live/billboards/new_live.html.heex
+++ b/lib/premiere_ecoute_web/live/billboards/new_live.html.heex
@@ -1,4 +1,4 @@
-<Layouts.app flash={@flash} current_scope={assigns[:current_scope] || %{}}>
+<Layouts.app flash={@flash} banners={assigns[:banners] || []} current_scope={assigns[:current_scope] || %{}}>
   <div class="synthwave-bg min-h-screen text-white" style="min-height: calc(100vh - 5rem);">
     <div class="max-w-4xl mx-auto py-8 px-6">
       <!-- Billboard creation header with progressive steps design -->
