--- a/lib/premiere_ecoute_web/live/homepage_live.html.heex
+++ b/lib/premiere_ecoute_web/live/homepage_live.html.heex
@@ -1,4 +1,4 @@
-<Layouts.app flash={@flash} current_scope={assigns[:current_scope]}>
+<Layouts.app flash={@flash} banners={assigns[:banners] || []} current_scope={assigns[:current_scope]}>
   <div class="synthwave-bg text-white flex flex-col" style="min-height: calc(100vh - 5rem);">
     <!-- Hero Section -->
     <div class="flex-1 py-12">
