--- a/lib/premiere_ecoute_web/live/playlists/rules_live.html.heex
+++ b/lib/premiere_ecoute_web/live/playlists/rules_live.html.heex
@@ -1,4 +1,9 @@
-<Layouts.app flash={@flash} current_scope={assigns[:current_scope] || %{}} current_page="rules">
+<Layouts.app
+  flash={@flash}
+  banners={assigns[:banners] || []}
+  current_scope={assigns[:current_scope] || %{}}
+  current_page="rules"
+>
   <div class="synthwave-bg text-white flex flex-col" style="min-height: calc(100vh - 5rem);">
     <!-- Playlist Rules Configuration page -->
     <div class="flex-1 py-12">
