--- a/lib/premiere_ecoute_web/live/radio/viewer_live.html.heex
+++ b/lib/premiere_ecoute_web/live/radio/viewer_live.html.heex
@@ -34,18 +34,26 @@
                 <% end %>
               </div>
             </div>
-            <%= if track.provider_id do %>
-              <% track_id = track.provider_id |> String.split(":") |> List.last() %>
+            <%= for {provider, track_id} <- track.provider_ids do %>
               <a
-                href={"https://open.spotify.com/track/#{track_id}"}
+                href={link(provider, track_id)}
                 target="_blank"
                 rel="noopener noreferrer"
                 class="shrink-0 text-white opacity-40 hover:opacity-90 transition-opacity duration-200"
                 aria-label="Open on Spotify"
               >
-                <svg class="w-10 h-10" viewBox="0 0 24 24" fill="currentColor">
-                  <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z" />
-                </svg>
+                <%= if provider == :spotify do %>
+                  <svg class="w-10 h-10" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z" />
+                  </svg>
+                <% end %>
+                <%= if provider == :deezer do %>
+                  <svg class="w-10 h-10" viewBox="0 0 120 120" fill="currentColor">
+                    <svg width="120" height="120">
+                      <path d="M101.19 18.41c1.12-6.47 2.75-10.54 4.57-10.55 3.38.01 6.13 14.12 6.13 31.54s-2.75 31.54-6.13 31.54c-1.39 0-2.67-2.4-3.7-6.42-1.63 14.71-5.01 24.82-8.93 24.82-3.03 0-5.75-6.07-7.58-15.65-1.25 18.22-4.38 31.14-8.05 31.14-2.3 0-4.4-5.12-5.95-13.46-1.87 17.21-6.18 29.28-11.22 29.28s-9.36-12.06-11.22-29.28c-1.54 8.34-3.64 13.46-5.95 13.46-3.67 0-6.8-12.93-8.05-31.14-1.83 9.58-4.54 15.65-7.58 15.65-3.91 0-7.3-10.11-8.93-24.82-1.02 4.03-2.31 6.42-3.7 6.42-3.39 0-6.13-14.12-6.13-31.54S11.51 7.86 14.9 7.86c1.82 0 3.44 4.08 4.57 10.55C21.28 7.25 24.21 0 27.53 0c3.94 0 7.35 10.26 8.97 25.15C38.08 14.31 40.48 7.4 43.16 7.4c3.76 0 6.96 13.59 8.15 32.55 2.23-9.72 5.46-15.82 9.03-15.82s6.8 6.1 9.02 15.82C70.55 20.99 73.74 7.4 77.51 7.4c2.68 0 5.07 6.91 6.66 17.75C85.78 10.26 89.2 0 93.13 0c3.31 0 6.25 7.26 8.06 18.41zM0 36.3c0-7.79 1.56-14.1 3.48-14.1s3.48 6.31 3.48 14.1S5.4 50.4 3.48 50.4 0 44.08 0 36.3zm113.7 0c0-7.79 1.56-14.1 3.48-14.1s3.48 6.31 3.48 14.1-1.56 14.1-3.48 14.1-3.48-6.32-3.48-14.1z" />
+                    </svg>
+                  </svg>
+                <% end %>
               </a>
             <% end %>
           </div>
